WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28476
REGRESSION: fast/profiler/call.html is crashing occasionally
https://bugs.webkit.org/show_bug.cgi?id=28476
Summary
REGRESSION: fast/profiler/call.html is crashing occasionally
Eric Seidel (no email)
Reported
2009-08-19 17:14:37 PDT
REGRESSION: fast/profiler/call.html is crashing occasionally I see it crashing every so often on my machine. This is making the commit-queue reject patches that it shouldn't. I'll prepare a test to skip the test.
Attachments
I believe this is the crash report
(34.19 KB, text/plain)
2009-08-19 17:16 PDT
,
Eric Seidel (no email)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2009-08-19 17:16:17 PDT
Created
attachment 35160
[details]
I believe this is the crash report
Eric Seidel (no email)
Comment 2
2009-08-19 17:17:05 PDT
CCing JSC folks in case they have a clue.
Oliver Hunt
Comment 3
2009-08-20 22:25:56 PDT
Fixed in
r47620
Eric Seidel (no email)
Comment 4
2009-08-20 22:29:32 PDT
Thank you for the quick fix Oliver! :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug